--- a/deploy/env/.example/worker.env
+++ b/deploy/env/.example/worker.env
@@ -5,4 +5,5 @@ MQ_CONNECTION_STRING=nats://mq:4222
 CONCURRENCY_CONTROL_STATEFUL=10
 CONCURRENCY_CONTROL_STATELESS=50
 CONCURRENCY_CONTROL_DIRECT=100
+PROXY_URL=
 MODE=prod
