--- a/deploy/env/.example/server.env
+++ b/deploy/env/.example/server.env
@@ -1,5 +1,5 @@
 DATABASE_CONNECTION_STRING=postgres://operatorsync:operatorsync@db:5432/operatorsync
 REDIS_CONNECTION_STRING=redis://redis:6379/0
 MQ_CONNECTION_STRING=nats://mq:4222
-DISABLE_FLUSH_WORK=false
+MAIN_SERVER=true
 MODE=prod
