wip: windows cannot handle solidity, change os
What's your problem bro?

--- a/deploy/env/.example/worker.env
+++ b/deploy/env/.example/worker.env
@@ -6,4 +6,7 @@ CONCURRENCY_CONTROL_STATEFUL=10
 CONCURRENCY_CONTROL_STATELESS=50
 CONCURRENCY_CONTROL_DIRECT=100
 PROXY_URL=
+CROSSBELL_CHAIN_ID=3737
+CROSSBELL_JSON_RPC=https://rpc.crossbell.io
+ETHEREUM_PRIVATE_KEY=
 MODE=prod
