feat(wip): upload tiktok videos to livepeer

--- a/deploy/env/.example/worker.env
+++ b/deploy/env/.example/worker.env
@@ -1,6 +1,7 @@
 RSSHUB_STATEFUL=http://rsshub_stateful:1200
 RSSHUB_STATELESS=http://rsshub_stateless:1200
 IPFS_ENDPOINT=https://ipfs-relay.crossbell.io/upload
+LIVEPEER_API_KEY=
 MQ_CONNECTION_STRING=nats://mq:4222
 CONCURRENCY_CONTROL_STATEFUL=10
 CONCURRENCY_CONTROL_STATELESS=50
