--- a/deploy/dev/secrets.yaml
+++ b/deploy/dev/secrets.yaml
@@ -3,8 +3,7 @@ stringData:
   DATABASE_CONNECTION_STRING: ${DATABASE_CONNECTION_STRING_DEV}
   REDIS_CONNECTION_STRING: ${REDIS_CONNECTION_STRING_DEV}
   MQ_CONNECTION_STRING: nats://nats.default:4222
-  MAIN_SERVER: 'true'
-  MODE: prod
+  MODE: dev
 kind: Secret
 metadata:
   name: operatorsync-server
@@ -27,7 +26,7 @@ stringData:
   CROSSBELL_CONTRACT_ADDRESS: '0xa6f969045641Cf486a747A2688F3a5A6d43cd0D8'
   ETHEREUM_PRIVATE_KEY: ${ETHEREUM_PRIVATE_KEY}
   ONCHAIN_WORKER: 'true'
-  MODE: prod
+  MODE: dev
 kind: Secret
 metadata:
   name: operatorsync-worker
