feat: worker debug

--- a/deploy/prod/secrets.yaml
+++ b/deploy/prod/secrets.yaml
@@ -26,7 +26,7 @@ stringData:
   CROSSBELL_CONTRACT_ADDRESS: '0xa6f969045641Cf486a747A2688F3a5A6d43cd0D8'
   ETHEREUM_PRIVATE_KEY: ${ETHEREUM_PRIVATE_KEY}
   ONCHAIN_WORKER: 'true'
-  MODE: prod
+  MODE: debug
 kind: Secret
 metadata:
   name: operatorsync-worker
