chore: switch to dev mode
not ready for prod yet

--- a/deploy/prod/secrets.yaml
+++ b/deploy/prod/secrets.yaml
@@ -3,7 +3,7 @@ stringData:
   DATABASE_CONNECTION_STRING: ${DATABASE_CONNECTION_STRING_PROD}
   REDIS_CONNECTION_STRING: ${REDIS_CONNECTION_STRING_PROD}
   MQ_CONNECTION_STRING: nats://nats.default:4222
-  MODE: prod
+  MODE: dev
 kind: Secret
 metadata:
   name: operatorsync-server
@@ -26,7 +26,7 @@ stringData:
   CROSSBELL_CONTRACT_ADDRESS: '0xa6f969045641Cf486a747A2688F3a5A6d43cd0D8'
   ETHEREUM_PRIVATE_KEY: ${ETHEREUM_PRIVATE_KEY}
   ONCHAIN_WORKER: 'true'
-  MODE: prod
+  MODE: dev
 kind: Secret
 metadata:
   name: operatorsync-worker
