--- a/deploy/dev/deploy-server-main.yaml
+++ b/deploy/dev/deploy-server-main.yaml
@@ -33,7 +33,7 @@ spec:
                 name: operatorsync-server
           env:
             - name: MAIN_SERVER
-              value: 'false'
+              value: 'true'
           ports:
             - containerPort: 8080
               protocol: TCP
