--- a/deploy/env/.example/worker.env
+++ b/deploy/env/.example/worker.env
@@ -3,6 +3,7 @@ RSSHUB_STATELESS=http://rsshub_stateless:1200
 IPFS_ENDPOINT=https://ipfs-relay.crossbell.io/upload
 LIVEPEER_API_KEY=
 MQ_CONNECTION_STRING=amqp://guest:guest@mq:5672/
+WORKER_RPC_PORT=2915
 CONCURRENCY_CONTROL_STATEFUL=10
 CONCURRENCY_CONTROL_STATELESS=50
 CONCURRENCY_CONTROL_DIRECT=100
