feat: mq and rpc deployment

--- a/deploy/prod/secrets.yaml
+++ b/deploy/prod/secrets.yaml
@@ -2,7 +2,9 @@ apiVersion: v1
 stringData:
   DATABASE_CONNECTION_STRING: ${DATABASE_CONNECTION_STRING_PROD}
   REDIS_CONNECTION_STRING: ${REDIS_CONNECTION_STRING_PROD}
-  MQ_CONNECTION_STRING: nats://nats.default:4222
+  MQ_CONNECTION_STRING: ${MQ_CONNECTION_STRING_PROD}
+  WORKER_RPC_PORT: "22915"
+  WORKER_RPC_ENDPOINT: "opsync-worker.crossbell"
   MODE: dev
 kind: Secret
 metadata:
@@ -16,7 +18,7 @@ stringData:
   RSSHUB_STATELESS: http://rsshub-stateless.crossbell:1200
   IPFS_ENDPOINT: ${IPFS_ENDPOINT}
   LIVEPEER_API_KEY: ${LIVEPEER_API_KEY}
-  MQ_CONNECTION_STRING: nats://nats.default:4222
+  MQ_CONNECTION_STRING: ${MQ_CONNECTION_STRING_PROD}
   CONCURRENCY_CONTROL_STATEFUL: '10'
   CONCURRENCY_CONTROL_STATELESS: '50'
   CONCURRENCY_CONTROL_DIRECT: '100'
@@ -26,6 +28,7 @@ stringData:
   CROSSBELL_CONTRACT_ADDRESS: '0xa6f969045641Cf486a747A2688F3a5A6d43cd0D8'
   ETHEREUM_PRIVATE_KEY: ${ETHEREUM_PRIVATE_KEY}
   ONCHAIN_WORKER: 'true'
+  WORKER_RPC_PORT: "22915"
   MODE: dev
 kind: Secret
 metadata:
