--- a/deploy/dev/svc.yaml
+++ b/deploy/dev/svc.yaml
@@ -43,3 +43,19 @@ spec:
       protocol: TCP
       port: 8080
       targetPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: opsync-worker
+  namespace: crossbell
+spec:
+  type: ClusterIP
+  selector:
+    app: operatorsync
+    tier: worker
+  ports:
+    - name: rpc
+      protocol: TCP
+      port: 22915
+      targetPort: 22915
