--- a/deploy/dev/deploy-server-main.yaml
+++ b/deploy/dev/deploy-server-main.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: operatorsync-server
+  name: operatorsync-server-main
   namespace: crossbell
 spec:
   progressDeadlineSeconds: 600
@@ -33,7 +33,7 @@ spec:
                 name: operatorsync-server
           env:
             - name: MAIN_SERVER
-              value: 'false'
+              value: 'true'
           ports:
             - containerPort: 8080
               protocol: TCP
