feat: use alpine redis

--- a/deploy/docker-compose/docker-compose.prod.yml
+++ b/deploy/docker-compose/docker-compose.prod.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - db_storage:/var/lib/postgresql/data
   redis:
-    image: redis
+    image: redis:alpine
     restart: unless-stopped
     env_file: ../env/redis.env
     networks:
