--- a/deploy/docker-compose/docker-compose.dev.yml
+++ b/deploy/docker-compose/docker-compose.dev.yml
@@ -7,7 +7,7 @@ services:
       - 127.0.0.1:5432:5432
     env_file: ../env/db.env
   redis:
-    image: redis
+    image: redis:alpine
     ports:
       - 127.0.0.1:6379:6379
     env_file: ../env/redis.env
