fix: add missing dev secret

--- a/deploy/dev/secrets.yaml
+++ b/deploy/dev/secrets.yaml
@@ -17,6 +17,7 @@ stringData:
   RSSHUB_STATEFUL: http://rsshub-stateful.crossbell:1200
   RSSHUB_STATELESS: https://rsshub.crossbell.io
   IPFS_ENDPOINT: ${IPFS_ENDPOINT}
+  REDIS_CONNECTION_STRING: ${REDIS_CONNECTION_STRING_DEV}
   MQ_CONNECTION_STRING: ${MQ_CONNECTION_STRING_DEV}
   CONCURRENCY_CONTROL_STATEFUL: '10'
   CONCURRENCY_CONTROL_STATELESS: '50'
