feat: finish pixiv image support

--- a/deploy/dev/secrets.yaml
+++ b/deploy/dev/secrets.yaml
@@ -14,7 +14,7 @@ type: Opaque
 ---
 apiVersion: v1
 stringData:
-  RSSHUB_STATEFUL: http://rsshub-stateful.crossbell:1200
+  RSSHUB_STATEFUL: https://rsshub.crossbell.io
   RSSHUB_STATELESS: https://rsshub.crossbell.io
   IPFS_ENDPOINT: ${IPFS_ENDPOINT}
   REDIS_CONNECTION_STRING: ${REDIS_CONNECTION_STRING_DEV}
