--- a/deploy/env/.example/worker.env
+++ b/deploy/env/.example/worker.env
@@ -10,6 +10,7 @@ CONCURRENCY_CONTROL_DIRECT=100
 PROXY_URL=
 CROSSBELL_CHAIN_ID=3737
 CROSSBELL_JSON_RPC=https://rpc.crossbell.io
+CROSSBELL_INDEXER=https://indexer.crossbell.io
 CROSSBELL_CONTRACT_ADDRESS=0xa6f969045641Cf486a747A2688F3a5A6d43cd0D8
 ETHEREUM_PRIVATE_KEY=
 MODE=prod
