--- a/deploy/prod/secrets.yaml
+++ b/deploy/prod/secrets.yaml
@@ -25,6 +25,7 @@ stringData:
   PROXY_URL: ${PROXY_URL}
   CROSSBELL_CHAIN_ID: '3737'
   CROSSBELL_JSON_RPC: https://rpc.crossbell.io
+  CROSSBELL_INDEXER: https://indexer.crossbell.io
   CROSSBELL_CONTRACT_ADDRESS: '0xa6f969045641Cf486a747A2688F3a5A6d43cd0D8'
   ETHEREUM_PRIVATE_KEY: ${ETHEREUM_PRIVATE_KEY}
   ONCHAIN_WORKER: 'true'
