chore: update rsshub endpoints

--- a/deploy/prod/secrets.yaml
+++ b/deploy/prod/secrets.yaml
@@ -14,8 +14,8 @@ type: Opaque
 ---
 apiVersion: v1
 stringData:
-  RSSHUB_STATEFUL: https://rsshub.crossbell.io
-  RSSHUB_STATELESS: https://rsshub.crossbell.io
+  RSSHUB_STATEFUL: ${RSSHUB_ENDPOINT}
+  RSSHUB_STATELESS: ${RSSHUB_ENDPOINT}
   IPFS_ENDPOINT: ${IPFS_ENDPOINT}
   REDIS_CONNECTION_STRING: ${REDIS_CONNECTION_STRING_PROD}
   MQ_CONNECTION_STRING: ${MQ_CONNECTION_STRING_PROD}
