--- a/deploy/docker-compose/docker-compose.prod.yml
+++ b/deploy/docker-compose/docker-compose.prod.yml
@@ -9,14 +9,6 @@ services:
       - server_network
     volumes:
       - db_storage:/var/lib/postgresql/data
-  redis:
-    image: redis:alpine
-    restart: unless-stopped
-    env_file: ../env/redis.env
-    networks:
-      - server_network
-    volumes:
-      - redis_storage:/data
   # Both related
   mq:
     image: rabbitmq
@@ -25,6 +17,15 @@ services:
     networks:
       - server_network
       - worker_network
+  redis:
+    image: redis:alpine
+    restart: unless-stopped
+    env_file: ../env/redis.env
+    networks:
+      - server_network
+      - worker_network
+    volumes:
+      - redis_storage:/data
   # Worker related
   rsshub_stateful:
     image: diygod/rsshub:chromium-bundled
