chore: remove IPFS endpoint

--- a/deploy/env/.example/worker.env
+++ b/deploy/env/.example/worker.env
@@ -1,6 +1,6 @@
 RSSHUB_STATEFUL=http://rsshub_stateful:1200
 RSSHUB_STATELESS=http://rsshub_stateless:1200
-IPFS_ENDPOINT=https://ipfs-relay.crossbell.io
+IPFS_ENDPOINT=
 REDIS_CONNECTION_STRING=redis://redis:6379/0
 MQ_CONNECTION_STRING=amqp://guest:guest@mq:5672/
 WORKER_RPC_PORT=22915
