feat: add heartbeat webhooks

--- a/deploy/prod/secrets.yaml
+++ b/deploy/prod/secrets.yaml
@@ -30,6 +30,8 @@ stringData:
   ETHEREUM_PRIVATE_KEY: ${ETHEREUM_PRIVATE_KEY}
   ONCHAIN_WORKER: 'true'
   WORKER_RPC_PORT: "22915"
+  HEARTBEAT_WEBHOOK_FEED_COLLECT: ${HEARTBEAT_WEBHOOK_FEED_COLLECT}
+  HEARTBEAT_WEBHOOK_ACCOUNT_RESUME: ${HEARTBEAT_WEBHOOK_ACCOUNT_RESUME}
   MODE: dev
 kind: Secret
 metadata:
