--- a/deploy/prod/deploy-server-main.yaml
+++ b/deploy/prod/deploy-server-main.yaml
@@ -46,16 +46,13 @@ spec:
               cpu: '1500m'
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
-          readinessProbe:
-            tcpSocket:
-              port: 8080
-            initialDelaySeconds: 40
-            periodSeconds: 10
           livenessProbe:
-            tcpSocket:
+            httpGet:
+              path: /healthcheck
               port: 8080
             initialDelaySeconds: 40
-            periodSeconds: 20
+            failureThreshold: 1
+            periodSeconds: 60
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
