chore: csb node selector

--- a/deploy/prod/deploy-server-main.yaml
+++ b/deploy/prod/deploy-server-main.yaml
@@ -23,6 +23,13 @@ spec:
         tier: server
     spec:
       enableServiceLinks: false
+      nodeSelector:
+        rss3.io/usage: csb-others
+      tolerations:
+      - key: "rss3.io/usage"
+        operator: "Equal"
+        value: "csb-others"
+        effect: "NoSchedule"
       containers:
         - image: $IMAGE_TAG_RELEASE
           imagePullPolicy: Always
