--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -1,97 +1,48 @@
-# build and push docker image to docker hub
-name: Build & Deploy
-
+name: Build and Deploy
 on:
   push:
     branches:
-      - 'main'
-      - 'develop'
-
-env:
-  IMAGE_NAME: flosspicks/opsync
-  REGION_ID: us-east-1
-  DEV_ACK_CLUSTER_ID: cd1d0ffc40b5242b39ddda1864e71e30d
-  PROD_ACK_CLUSTER_ID: cfc647c22fd6848b5a602ad4d7470632b
-
+      - develop
+      - main
+    tags:
+      - v*
 jobs:
   build:
-    runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.meta.outputs.version }}
-    steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v2
-      - name: docker meta
-        id: meta
-        uses: docker/metadata-action@v3
-        with:
-          images: ${{ env.IMAGE_NAME }}
-          tags: |
-            type=sha
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./deploy/dockerfile/Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-
+    uses: NaturalSelectionLabs/Daedalus/.github/workflows/docker-tpl.yaml@main
+    with:
+      images: flosspicks/opsync
+      context: .
+      dockerfile: ./deploy/dockerfile/Dockerfile
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
   deploy-dev:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Set K8s context
-        uses: aliyun/ack-set-context@v1
-        with:
-          access-key-id: "${{ secrets.ACCESS_KEY_ID }}"
-          access-key-secret: "${{ secrets.ACCESS_KEY_SECRET }}"
-          cluster-id: "${{ env.DEV_ACK_CLUSTER_ID }}"
-      - run: |
-          wget https://github.com/mikefarah/yq/releases/download/v4.25.1/yq_linux_amd64.tar.gz -O - | tar xz && mv yq_linux_amd64 /usr/local/bin/yq
-          curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.22.10/bin/linux/amd64/kubectl && chmod +x kubectl && mv kubectl /usr/local/bin/kubectl
-      - uses: sljeff/secrets2env@main
-        with:
-          secrets-json: ${{ toJson(secrets) }}
-      - env:
-          IMAGE_TAG_RELEASE: ${{ env.IMAGE_NAME }}:${{ needs.build.outputs.version }}
-        run: |
-          sh apply.sh deploy/dev/*
-
+    if: github.ref == 'refs/heads/develop'
+    uses: NaturalSelectionLabs/Daedalus/.github/workflows/deploy-v3-tpl.yaml@main
+    needs:
+      - build
+    with:
+      images: flosspicks/opsync
+      tag: sha-${{ github.sha }}
+      cluster: dev
+      namespace: crossbell
+      releaseName: xfeed
+      revision: develop
+      dir: deploy/dev
+    secrets:
+      ARGOCD_TOKEN: ${{ secrets.ARGOCD_TOKEN }}
   deploy-prod:
     if: github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    needs: [build, deploy-dev]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Set K8s context
-        uses: aliyun/ack-set-context@v1
-        with:
-          access-key-id: "${{ secrets.ACCESS_KEY_ID }}"
-          access-key-secret: "${{ secrets.ACCESS_KEY_SECRET }}"
-          cluster-id: "${{ env.PROD_ACK_CLUSTER_ID }}"
-      - run: |
-          wget https://github.com/mikefarah/yq/releases/download/v4.25.1/yq_linux_amd64.tar.gz -O - | tar xz && mv yq_linux_amd64 /usr/local/bin/yq
-          curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.22.10/bin/linux/amd64/kubectl && chmod +x kubectl && mv kubectl /usr/local/bin/kubectl
-      - uses: sljeff/secrets2env@main
-        with:
-          secrets-json: ${{ toJson(secrets) }}
-      - run: |
-          sh apply.sh deploy/prod/*
-        env:
-          IMAGE_TAG_RELEASE: ${{ env.IMAGE_NAME }}:${{ needs.build.outputs.version }}
+    uses: NaturalSelectionLabs/Daedalus/.github/workflows/deploy-v3-tpl.yaml@main
+    needs:
+      - build
+    with:
+      images: flosspicks/opsync
+      tag: sha-${{ github.sha }}
+      cluster: prod
+      namespace: crossbell
+      releaseName: xfeed
+      revision: main
+      dir: deploy/prod
+    secrets:
+      ARGOCD_TOKEN: ${{ secrets.ARGOCD_TOKEN }}
