--- a/deploy/base/server/deploy/server-main.yaml
+++ b/deploy/base/server/deploy/server-main.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: operatorsync-worker
+  name: operator-sync-server-main
   namespace: crossbell
 spec:
   progressDeadlineSeconds: 600
-  replicas: 3
+  replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app: operatorsync
-      tier: worker
+      app: operator-sync
+      tier: server
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -19,34 +19,40 @@ spec:
   template:
     metadata:
       labels:
-        app: operatorsync
-        tier: worker
+        app: operator-sync
+        tier: server
     spec:
       enableServiceLinks: false
-      nodeSelector:
-        rss3.io/usage: csb-others
-      tolerations:
-      - key: "rss3.io/usage"
-        operator: "Equal"
-        value: "csb-others"
-        effect: "NoSchedule"
       containers:
-        - image: $IMAGE_TAG_RELEASE
+        - image: flosspicks/opsync
           imagePullPolicy: Always
-          name: operatorsync-worker
-          command: ["worker"]
+          name: operator-sync-server
+          command: ["server"]
           envFrom:
             - secretRef:
-                name: operatorsync-worker
+                name: operator-sync-server
+          env:
+            - name: MAIN_SERVER
+              value: 'true'
+          ports:
+            - containerPort: 8080
+              protocol: TCP
           resources:
             requests:
               memory: '200Mi'
               cpu: '100m'
             limits:
-              memory: '2500Mi'
-              cpu: '2500m'
+              memory: '1500Mi'
+              cpu: '1500m'
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
+          livenessProbe:
+            httpGet:
+              path: /healthcheck
+              port: 8080
+            initialDelaySeconds: 40
+            failureThreshold: 1
+            periodSeconds: 60
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
