--- a/deploy/base/worker/deploy.yaml
+++ b/deploy/base/worker/deploy.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: operatorsync-server
+  name: operator-sync-worker
   namespace: crossbell
 spec:
   progressDeadlineSeconds: 600
@@ -9,8 +9,8 @@ spec:
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app: operatorsync
-      tier: server
+      app: operator-sync
+      tier: worker
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -19,31 +19,18 @@ spec:
   template:
     metadata:
       labels:
-        app: operatorsync
-        tier: server
+        app: operator-sync
+        tier: worker
     spec:
       enableServiceLinks: false
-      nodeSelector:
-        rss3.io/usage: csb-others
-      tolerations:
-      - key: "rss3.io/usage"
-        operator: "Equal"
-        value: "csb-others"
-        effect: "NoSchedule"
       containers:
         - image: $IMAGE_TAG_RELEASE
           imagePullPolicy: Always
-          name: operatorsync-server
-          command: ["server"]
-          env:
-            - name: MAIN_SERVER
-              value: 'false'
+          name: operator-sync-worker
+          command: ["worker"]
           envFrom:
             - secretRef:
-                name: operatorsync-server
-          ports:
-            - containerPort: 8080
-              protocol: TCP
+                name: operator-sync-worker
           resources:
             requests:
               memory: '200Mi'
@@ -53,16 +40,6 @@ spec:
               cpu: '1500m'
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
-          readinessProbe:
-            tcpSocket:
-              port: 8080
-            initialDelaySeconds: 40
-            periodSeconds: 10
-          livenessProbe:
-            tcpSocket:
-              port: 8080
-            initialDelaySeconds: 40
-            periodSeconds: 20
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
