chore: fix release name

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -26,7 +26,7 @@ jobs:
       tag: sha-${{ github.sha }}
       cluster: dev
       namespace: crossbell
-      releaseName: xfeed
+      releaseName: operator-sync
       revision: develop
       dir: deploy/dev
     secrets:
@@ -41,7 +41,7 @@ jobs:
       tag: sha-${{ github.sha }}
       cluster: prod
       namespace: crossbell
-      releaseName: xfeed
+      releaseName: operator-sync
       revision: main
       dir: deploy/prod
     secrets:
