chore: add secret

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -6,6 +6,8 @@ on:
       - main
     tags:
       - v*
+    paths-ignore:
+      - deploy/**
 jobs:
   build:
     uses: NaturalSelectionLabs/Daedalus/.github/workflows/docker-tpl.yaml@main
