--- a/deploy/base/server/secret.yaml
+++ b/deploy/base/server/secret.yaml
@@ -3,11 +3,16 @@ kind: Secret
 metadata:
   name: operator-sync-server
   namespace: crossbell
+  annotations:
+    avp.kubernetes.io/path: "kv/data/crossbell/operator-sync"
+    avp.kubernetes.io/ignore: "true"
 type: Opaque
 stringData:
-  DATABASE_CONNECTION_STRING: "<DATABASE_CONNECTION_STRING_DEV>"
-  REDIS_CONNECTION_STRING: "<REDIS_CONNECTION_STRING_DEV>"
-  MQ_CONNECTION_STRING: "<MQ_CONNECTION_STRING_DEV>"
+  DATABASE_CONNECTION_STRING: "<DATABASE_CONNECTION_STRING>"
+  REDIS_CONNECTION_STRING: "<REDIS_CONNECTION_STRING>"
+  MQ_CONNECTION_STRING: "<MQ_CONNECTION_STRING>"
   WORKER_RPC_PORT: "22915"
   WORKER_RPC_ENDPOINT: "opsync-worker.crossbell"
   MODE: "dev"
+  HEARTBEAT_WEBHOOK_FEED_COLLECT: "<HEARTBEAT_WEBHOOK_FEED_COLLECT>"
+  HEARTBEAT_WEBHOOK_ACCOUNT_RESUME: "<HEARTBEAT_WEBHOOK_ACCOUNT_RESUME>"
