--- a/deploy/base/worker/secret.yaml
+++ b/deploy/base/worker/secret.yaml
@@ -3,13 +3,15 @@ kind: Secret
 metadata:
   name: operator-sync-worker
   namespace: crossbell
+  annotations:
+    avp.kubernetes.io/path: "kv/data/crossbell/operator-sync"
 type: Opaque
 stringData:
   RSSHUB_STATEFUL: "<RSSHUB_ENDPOINT>"
   RSSHUB_STATELESS: "<RSSHUB_ENDPOINT>"
   IPFS_ENDPOINT: "<IPFS_ENDPOINT>"
-  REDIS_CONNECTION_STRING: "<REDIS_CONNECTION_STRING_DEV>"
-  MQ_CONNECTION_STRING: "<MQ_CONNECTION_STRING_DEV>"
+  REDIS_CONNECTION_STRING: "<REDIS_CONNECTION_STRING>"
+  MQ_CONNECTION_STRING: "<MQ_CONNECTION_STRING>"
   CONCURRENCY_CONTROL_STATEFUL: "10"
   CONCURRENCY_CONTROL_STATELESS: "50"
   CONCURRENCY_CONTROL_DIRECT: "100"
