chore: fix secret

--- a/deploy/base/server/secret.yaml
+++ b/deploy/base/server/secret.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: crossbell
   annotations:
     avp.kubernetes.io/path: "kv/data/crossbell/operator-sync"
-    avp.kubernetes.io/ignore: "true"
+    avp.kubernetes.io/remove-missing: "true"
 type: Opaque
 stringData:
   DATABASE_CONNECTION_STRING: "<DATABASE_CONNECTION_STRING>"
