chore: fix image tag

--- a/deploy/base/worker/deploy.yaml
+++ b/deploy/base/worker/deploy.yaml
@@ -24,7 +24,7 @@ spec:
     spec:
       enableServiceLinks: false
       containers:
-        - image: $IMAGE_TAG_RELEASE
+        - image: flosspicks/opsync
           imagePullPolicy: Always
           name: operator-sync-worker
           command: ["worker"]
