--- a/deploy/dev/route.yaml
+++ b/deploy/dev/route.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: crossbell
 spec:
   entryPoints:
-  - web
+  - websecure
   routes:
   - kind: Rule
     match: Host(`test-opsync.crossbell.io`)
